--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -14,3 +14,20 @@
 .mdx-author p > span {
   display: block;
 }
+
+[data-md-color-scheme="dark"] {
+  --md-primary-fg-color:        #20252a;
+  --md-primary-fg-color--light: #f9fbfa;
+  --md-primary-fg-color--dark:  #f9fbfa;
+}
+
+[data-md-color-scheme="dark"] .md-main {
+  background-color: #97ABB1; /* Замените на нужный цвет фона */
+}
+
+
+[data-md-color-scheme="light"] {
+  --md-primary-fg-color:        #EE0F0F;
+  --md-primary-fg-color--light: #ECB7B7;
+  --md-primary-fg-color--dark:  #90030C;
+}
