--- a/overrides/partials/blog_extended_preview.html
+++ b/overrides/partials/blog_extended_preview.html
@@ -2,6 +2,6 @@
   <span class="twemoji">
     {% include ".icons/octicons/arrow-right-24.svg" %}
   </span>
-  Continue reading
+  Продолжить чтение
   <hr>
 </a>
