--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -15,19 +15,17 @@
   display: block;
 }
 
-[data-md-color-scheme="dark"] {
-  --md-primary-fg-color:        #20252a;
-  --md-primary-fg-color--light: #f9fbfa;
-  --md-primary-fg-color--dark:  #f9fbfa;
+.md-typeset h1{
+    opacity: 1;
+    color: inherit;
+    font-weight:600;
 }
 
-[data-md-color-scheme="dark"] .md-main {
-  background-color: #97ABB1; /* Замените на нужный цвет фона */
+.md-typeset blockquote{
+    opacity: 1;
+    color: inherit;
 }
 
-
-[data-md-color-scheme="light"] {
-  --md-primary-fg-color:        #EE0F0F;
-  --md-primary-fg-color--light: #ECB7B7;
-  --md-primary-fg-color--dark:  #90030C;
+.md-typeset a {
+    font-weight:600
 }
