--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -32,7 +32,7 @@
 
 .announce-wrapper{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     align-items: center;
     max-width:100%
